fixed header issue on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,7 +15,7 @@
 header.sticky {
     position: fixed;
    top: 2px;
-   right: 30px;
+   right: 0px;
    background-color: $header-color;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
@@ -25,7 +25,7 @@ header.sticky {
        display: block;
        float: right;
        width: 36px;
-       height: 36px;
+       height: 26px;
        line-height: 0;
        padding-top: 14px;
        text-align: center;
@@ -100,7 +100,7 @@ header.sticky {
     @include media-query($on-palm) {
         position: absolute;
         top: 2px;
-        right: 30px;
+        right: 10px;
         background-color: $header-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
