--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -288,9 +288,9 @@ only screen and (max-width: 760px),
   /*
   Label the data
   */
-  td:nth-of-type(3):before { content: "PHP"; }
-  td:nth-of-type(4):before { content: "JS"; }
-  td:nth-of-type(5):before { content: "HTML"; }
-  td:nth-of-type(6):before { content: "CSS"; }
-  td:nth-of-type(7):before { content: "Magento"; }
+  td:nth-of-type(1):before { content: "PHP"; }
+  td:nth-of-type(2):before { content: "JS"; }
+  td:nth-of-type(3):before { content: "HTML"; }
+  td:nth-of-type(4):before { content: "CSS"; }
+  td:nth-of-type(5):before { content: "Magento"; }
 }
